# fishmlserv

./: .pyproject.toml.swp  Dockerfile  MANIFEST.in  README.md  fly.toml  pyproject.toml  pyproject.toml.b  r.txt
LB/: default.conf
dags/: fastapi.py
note/: Standard_Score.ipynb  Untitled.ipynb  fishml.ipynb
src/fishmlserv/: .main.py.swp  cli.py  main.py  req.py
src/fishmlserv/model/: manager.py  model.pkl
tests/: test_req.py
