[project]
name = "fishmlserv"
version = "1.0.0"
description = "Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
authors = [
    {name = "hahahellooo", email = "hahahello777@gmail.com"},
]
dependencies = [
    "fire>=0.6.0",
    "typer>=0.12.5",
    "matplotlib>=3.9.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
matplotlib = []
[tool.pytest.ini_options]
pythonpath = 'src'

[project.scripts]
get-model-path = 'fishmlserv.cli:model_path'
run-prediction-fire = 'fishmlserv.cli:pp'
run-prediction-typer = 'fishmlserv.cli:ppp'

